Fix dashboard namespace and Grafana port
Critical fixes:
- Change dashboard ConfigMaps from $NAMESPACE to 'monitoring' namespace
- Grafana sidecar only searches 'monitoring' namespace (per oneshot.sh)
- Fix Grafana port from 30300 to 30080
- Add export to GRAFANA_URL in Planner dashboard cell
- Update messages to reflect correct namespace

This fixes dashboards not appearing in Grafana UI

--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cc81bdc0",
+   "id": "96fae9e4",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0424b1ea",
+   "id": "7d6f4bb3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2d96e1d6",
+   "id": "0f0ba7e7",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Running\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b8a03e2",
+   "id": "7461dbf3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53def63b",
+   "id": "e0107730",
    "metadata": {},
    "source": [
     "### Step 3: Verify Monitoring Stack is Running\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfa0d906",
+   "id": "719ec5e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb94620c",
+   "id": "611c7c1a",
    "metadata": {},
    "source": [
     "---\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7db35b5f",
+   "id": "f1844718",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55e42b07",
+   "id": "3f21d829",
    "metadata": {},
    "source": [
     "### Step 2: Verify PodMonitors for Prometheus\n",
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9edcff8f",
+   "id": "b1ca1135",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b13201a1",
+   "id": "32cc77ff",
    "metadata": {},
    "source": [
     "### Step 3: Test Metrics Endpoint \n",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea699e7f",
+   "id": "09c5a8f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06215e8e",
+   "id": "6d647636",
    "metadata": {},
    "source": [
     "### Step 4: Send Test Traffic to Generate Metrics\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17884985",
+   "id": "e941f957",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02fac972",
+   "id": "87053467",
    "metadata": {},
    "source": [
     "---\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a84ad6c9",
+   "id": "bbf7d127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,15 +383,15 @@
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "export GRAFANA_URL=${GRAFANA_URL:-\"http://$(hostname -I | awk '{print $1}'):30080\"}\n",
     "\n",
-    "# Create ConfigMap with dashboard JSON\n",
-    "echo \"Deploying Dynamo Inference Dashboard to $NAMESPACE...\"\n",
+    "# Create ConfigMap with dashboard JSON in monitoring namespace (where Grafana looks)\n",
+    "echo \"Deploying Dynamo Inference Dashboard to monitoring namespace...\"\n",
     "\n",
     "cat > /tmp/dynamo-inference-dashboard-configmap.yaml << EOF\n",
     "apiVersion: v1\n",
     "kind: ConfigMap\n",
     "metadata:\n",
     "  name: grafana-dashboard-dynamo-inference\n",
-    "  namespace: $NAMESPACE\n",
+    "  namespace: monitoring\n",
     "  labels:\n",
     "    grafana_dashboard: \"1\"\n",
     "data:\n",
@@ -405,17 +405,17 @@
     "kubectl apply -f /tmp/dynamo-inference-dashboard-configmap.yaml\n",
     "\n",
     "echo \"\"\n",
-    "echo \"✓ Dashboard ConfigMap deployed to namespace: $NAMESPACE\"\n",
+    "echo \"✓ Dashboard ConfigMap deployed to monitoring namespace\"\n",
     "echo \"  Cluster-wide Grafana sidecar will auto-discover it within ~30 seconds\"\n",
     "echo \"  Access at: $GRAFANA_URL (look for 'Dynamo Inference Metrics' dashboard)\"\n",
     "echo \"\"\n",
-    "echo \"Note: The ConfigMap is created in your namespace ($NAMESPACE), but the\"\n",
-    "echo \"      cluster-wide Grafana searches all namespaces for dashboards.\""
+    "echo \"Note: The ConfigMap is created in the monitoring namespace where\"\n",
+    "echo \"      the cluster-wide Grafana sidecar searches for dashboards.\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "24f625bb",
+   "id": "398af450",
    "metadata": {},
    "source": [
     "---\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8537cb19",
+   "id": "109d85e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fefa8a88",
+   "id": "a616e9eb",
    "metadata": {},
    "source": [
     "---\n",
@@ -526,21 +526,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ea23e3a",
+   "id": "df3a860b",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "GRAFANA_URL=\"http://$(hostname -I | awk '{print $1}'):30300\"\n",
+    "export GRAFANA_URL=${GRAFANA_URL:-\"http://$(hostname -I | awk '{print $1}'):30080\"}\n",
     "\n",
-    "# Create Planner dashboard ConfigMap\n",
+    "# Create Planner dashboard ConfigMap in monitoring namespace\n",
     "cat <<EOF | kubectl apply -f -\n",
     "apiVersion: v1\n",
     "kind: ConfigMap\n",
     "metadata:\n",
     "  name: grafana-dashboard-dynamo-planner\n",
-    "  namespace: $NAMESPACE\n",
+    "  namespace: monitoring\n",
     "  labels:\n",
     "    grafana_dashboard: \"1\"\n",
     "data:\n",
@@ -596,14 +596,15 @@
     "    }\n",
     "EOF\n",
     "\n",
-    "echo \"✓ Planner dashboard ConfigMap created\"\n",
-    "echo \"  Dashboard will auto-import to Grafana\"\n",
+    "echo \"\"\n",
+    "echo \"✓ Planner dashboard ConfigMap created in monitoring namespace\"\n",
+    "echo \"  Dashboard will auto-import to Grafana within ~30 seconds\"\n",
     "echo \"  View at: $GRAFANA_URL\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "b9eab035",
+   "id": "31591511",
    "metadata": {},
    "source": [
     "### Access Planner Dashboard"
@@ -612,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06cece2b",
+   "id": "e2187b71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -626,7 +627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8953e594",
+   "id": "565783a0",
    "metadata": {},
    "source": [
     "### Key Planner Metrics\n",
@@ -669,7 +670,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68d988ba",
+   "id": "60f66a33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +696,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "867725dd",
+   "id": "333fb060",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -869,7 +870,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "050db92a",
+   "id": "d7b582c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -908,7 +909,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "faf6ce06",
+   "id": "90918e1c",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -919,7 +920,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6440ffc",
+   "id": "d7911071",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -939,7 +940,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f6ac5cb0",
+   "id": "f5e3a865",
    "metadata": {},
    "source": [
     "---\n",
@@ -999,7 +1000,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a96f5ee",
+   "id": "aca9bd33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1019,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "529057db",
+   "id": "b73f23cd",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -1027,7 +1028,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92599d30",
+   "id": "ed86e9ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1046,7 +1047,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dd852d0",
+   "id": "4fa5836b",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -1055,7 +1056,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b77e426",
+   "id": "3985d6de",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0113c912",
+   "id": "7661aac4",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1079,7 +1080,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "865e10d1",
+   "id": "c4243b61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1094,7 +1095,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "61784011",
+   "id": "63d5aeed",
    "metadata": {},
    "source": [
     "---\n",
