Remove unready sections from Lab 2
- Remove Section 5: Planner Observability Dashboard (not ready yet)
- Replace detailed Known Issues with link to main repo
- Renumber remaining sections (Section 6→5, 7→6, 8→7)
- Cleaner notebook focused on production-ready features

--- a/02-monitoring-and-observability.ipynb
+++ b/02-monitoring-and-observability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "96fae9e4",
+   "id": "8af42b89",
    "metadata": {},
    "source": [
     "# Lab 1 Extension: Monitoring Dynamo with Prometheus and Grafana\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d6f4bb3",
+   "id": "a1d686d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f0ba7e7",
+   "id": "d233fbd8",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Running\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7461dbf3",
+   "id": "28f684da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0107730",
+   "id": "03f66953",
    "metadata": {},
    "source": [
     "### Step 3: Verify Monitoring Stack is Running\n",
@@ -157,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "719ec5e9",
+   "id": "425c3af4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "611c7c1a",
+   "id": "31ee26a3",
    "metadata": {},
    "source": [
     "---\n",
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1844718",
+   "id": "0eef2f3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f21d829",
+   "id": "7a2e110d",
    "metadata": {},
    "source": [
     "### Step 2: Verify PodMonitors for Prometheus\n",
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1ca1135",
+   "id": "4d04eb73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32cc77ff",
+   "id": "675355de",
    "metadata": {},
    "source": [
     "### Step 3: Test Metrics Endpoint \n",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09c5a8f1",
+   "id": "068a97c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d647636",
+   "id": "83951936",
    "metadata": {},
    "source": [
     "### Step 4: Send Test Traffic to Generate Metrics\n",
@@ -315,7 +315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e941f957",
+   "id": "1b133d3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87053467",
+   "id": "6d1776a1",
    "metadata": {},
    "source": [
     "---\n",
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbf7d127",
+   "id": "8c4da0aa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398af450",
+   "id": "bcf67b99",
    "metadata": {},
    "source": [
     "---\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "109d85e4",
+   "id": "0dc67a59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,161 +490,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a616e9eb",
+   "id": "a6b308fb",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Section 5: Planner Observability Dashboard (New in v0.8.0)\n",
-    "\n",
-    "### Objectives\n",
-    "- Understand the Planner component in Dynamo's architecture\n",
-    "- Import and configure the Planner observability dashboard\n",
-    "- Monitor request routing and KV cache decisions\n",
-    "\n",
-    "### What is the Planner?\n",
-    "\n",
-    "The **Planner** is Dynamo's intelligent request router that makes critical decisions:\n",
-    "- Which worker should handle each request (prefill vs. decode)\n",
-    "- KV cache placement and reuse strategies\n",
-    "- Load balancing across workers\n",
-    "- Request batching decisions\n",
-    "\n",
-    "In v0.8.0, the Planner has enhanced observability with dedicated metrics for production debugging.\n",
-    "\n",
-    "### Import Planner Dashboard\n",
-    "\n",
-    "The Planner dashboard helps you understand:\n",
-    "- Request routing decisions\n",
-    "- KV cache hit/miss rates\n",
-    "- Worker selection logic\n",
-    "- Queue depths and backpressure\n",
-    "\n",
-    "**Note:** This dashboard is available starting with Dynamo v0.8.0.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df3a860b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "export GRAFANA_URL=${GRAFANA_URL:-\"http://$(hostname -I | awk '{print $1}'):30080\"}\n",
-    "\n",
-    "# Create Planner dashboard ConfigMap in monitoring namespace\n",
-    "cat <<EOF | kubectl apply -f -\n",
-    "apiVersion: v1\n",
-    "kind: ConfigMap\n",
-    "metadata:\n",
-    "  name: grafana-dashboard-dynamo-planner\n",
-    "  namespace: monitoring\n",
-    "  labels:\n",
-    "    grafana_dashboard: \"1\"\n",
-    "data:\n",
-    "  dynamo-planner-dashboard.json: |\n",
-    "    {\n",
-    "      \"dashboard\": {\n",
-    "        \"title\": \"Dynamo Planner Observability\",\n",
-    "        \"tags\": [\"dynamo\", \"planner\", \"v0.8.0\"],\n",
-    "        \"timezone\": \"browser\",\n",
-    "        \"panels\": [\n",
-    "          {\n",
-    "            \"title\": \"Request Routing Decisions\",\n",
-    "            \"targets\": [\n",
-    "              {\n",
-    "                \"expr\": \"rate(dynamo_planner_routing_decisions_total[5m])\",\n",
-    "                \"legendFormat\": \"{{decision_type}}\"\n",
-    "              }\n",
-    "            ],\n",
-    "            \"type\": \"graph\"\n",
-    "          },\n",
-    "          {\n",
-    "            \"title\": \"KV Cache Hit Rate\",\n",
-    "            \"targets\": [\n",
-    "              {\n",
-    "                \"expr\": \"rate(dynamo_planner_kv_cache_hits_total[5m]) / rate(dynamo_planner_kv_cache_lookups_total[5m])\",\n",
-    "                \"legendFormat\": \"Cache Hit Rate\"\n",
-    "              }\n",
-    "            ],\n",
-    "            \"type\": \"graph\"\n",
-    "          },\n",
-    "          {\n",
-    "            \"title\": \"Worker Queue Depths\",\n",
-    "            \"targets\": [\n",
-    "              {\n",
-    "                \"expr\": \"dynamo_planner_worker_queue_depth\",\n",
-    "                \"legendFormat\": \"{{worker_id}}\"\n",
-    "              }\n",
-    "            ],\n",
-    "            \"type\": \"graph\"\n",
-    "          },\n",
-    "          {\n",
-    "            \"title\": \"Planning Latency (p95)\",\n",
-    "            \"targets\": [\n",
-    "              {\n",
-    "                \"expr\": \"histogram_quantile(0.95, rate(dynamo_planner_decision_duration_seconds_bucket[5m]))\",\n",
-    "                \"legendFormat\": \"p95 Planning Latency\"\n",
-    "              }\n",
-    "            ],\n",
-    "            \"type\": \"graph\"\n",
-    "          }\n",
-    "        ]\n",
-    "      }\n",
-    "    }\n",
-    "EOF\n",
-    "\n",
-    "echo \"\"\n",
-    "echo \"✓ Planner dashboard ConfigMap created in monitoring namespace\"\n",
-    "echo \"  Dashboard will auto-import to Grafana within ~30 seconds\"\n",
-    "echo \"  View at: $GRAFANA_URL\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "31591511",
-   "metadata": {},
-   "source": [
-    "### Access Planner Dashboard"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2187b71",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "echo \"Grafana URL: $GRAFANA_URL\"\n",
-    "echo \"\"\n",
-    "echo \"Navigate to: Dashboards → Dynamo Planner Observability\"\n",
-    "echo \"\"\n",
-    "echo \"(Anonymous access enabled - no login required)\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "565783a0",
-   "metadata": {},
-   "source": [
-    "### Key Planner Metrics\n",
-    "\n",
-    "| Metric | Description | What to Watch |\n",
-    "|--------|-------------|---------------|\n",
-    "| `dynamo_planner_routing_decisions_total` | Routing decisions made | Decision type distribution |\n",
-    "| `dynamo_planner_kv_cache_hits_total` | KV cache hits | High hit rate = efficient reuse |\n",
-    "| `dynamo_planner_kv_cache_lookups_total` | Total cache lookups | Cache utilization |\n",
-    "| `dynamo_planner_worker_queue_depth` | Requests queued per worker | Backpressure indicators |\n",
-    "| `dynamo_planner_decision_duration_seconds` | Time to make routing decision | Planning overhead |\n",
-    "\n",
-    "**Optimization Tip:** High KV cache hit rates (>70%) indicate effective prompt caching and can significantly reduce latency and costs.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "## Section 6: Unified Tracing with OpenTelemetry (New in v0.8.0)\n",
+    "## Section 5: Unified Tracing with OpenTelemetry (New in v0.8.0)\n",
     "\n",
     "### Objectives\n",
     "- Understand distributed tracing in Dynamo\n",
@@ -670,7 +521,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "60f66a33",
+   "id": "9310aa22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -696,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "333fb060",
+   "id": "deecf590",
    "metadata": {},
    "source": [
     "### What Tracing Shows You\n",
@@ -724,7 +575,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Section 7: Understanding Key Metrics\n",
+    "## Section 6: Understanding Key Metrics\n",
     "\n",
     "### Frontend Metrics\n",
     "\n",
@@ -784,7 +635,7 @@
     "\n",
     "---\n",
     "\n",
-    "## Section 8: Exercises and Exploration\n",
+    "## Section 7: Exercises and Exploration\n",
     "\n",
     "### Exercise 1: Correlate Load with Latency\n",
     "\n",
@@ -870,7 +721,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7b582c8",
+   "id": "d9129de3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90918e1c",
+   "id": "cbc8ada2",
    "metadata": {},
    "source": [
     "### Exercise 4: Cleanup Your Monitoring Resources\n",
@@ -920,7 +771,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7911071",
+   "id": "49d73f4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,29 +791,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5e3a865",
+   "id": "865afaa9",
    "metadata": {},
    "source": [
     "---\n",
     "\n",
-    "## Known Issues (v0.8.0 Observability)\n",
+    "## Known Issues\n",
     "\n",
-    "**⚠️ Monitoring-Specific Issues:**\n",
-    "\n",
-    "1. **Planner Dashboard Initial Load**: The Planner dashboard (new in v0.8.0) may show \"No data\" for the first 2-3 minutes after deployment. Metrics start appearing once requests flow through the system.\n",
-    "\n",
-    "2. **OpenTelemetry Trace Sampling**: Default trace sampling is 10% to reduce overhead. For debugging, increase sampling rate in deployment annotations: `opentelemetry.io/sample-rate: \"1.0\"`.\n",
-    "\n",
-    "3. **Grafana Dashboard Auto-Import Delay**: ConfigMaps with `grafana_dashboard: \"1\"` label may take 30-60 seconds to appear in Grafana. Refresh the dashboards list if not immediately visible.\n",
-    "\n",
-    "4. **PodMonitor Label Selectors**: Ensure your PodMonitor `matchLabels` exactly match the pod labels. Case-sensitive. Use `kubectl describe podmonitor` to debug.\n",
-    "\n",
-    "**Workarounds:**\n",
-    "- For missing metrics: Check PodMonitor status: `kubectl get podmonitors -n $NAMESPACE -o yaml`\n",
-    "- For tracing issues: Verify OTLP endpoint is reachable: `kubectl logs <pod> | grep -i otel`\n",
-    "- Dashboard not loading: Manually import JSON from ConfigMap\n",
-    "\n",
-    "**New in v0.8.0:** Unified tracing and Planner observability are production-ready but may have edge cases. Report issues to the team.\n",
+    "For known issues related to Dynamo v0.8.0 observability features, see the [Known Issues section in the main repository](https://github.com/ai-dynamo/dynamo/blob/main/KNOWN_ISSUES.md).\n",
     "\n",
     "---\n",
     "\n",
@@ -1000,7 +836,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aca9bd33",
+   "id": "935e3f19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,7 +855,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b73f23cd",
+   "id": "d7f063ae",
    "metadata": {},
    "source": [
     "### Grafana Dashboard Not Appearing\n"
@@ -1028,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed86e9ff",
+   "id": "0a52a436",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1047,7 +883,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fa5836b",
+   "id": "94eed34f",
    "metadata": {},
    "source": [
     "### Can't Access Grafana\n"
@@ -1056,7 +892,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3985d6de",
+   "id": "15d65ace",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1071,7 +907,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7661aac4",
+   "id": "03836d16",
    "metadata": {},
    "source": [
     "### Port Forwards Not Working\n"
@@ -1080,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4243b61",
+   "id": "00aca1fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +931,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63d5aeed",
+   "id": "dc5d3e5e",
    "metadata": {},
    "source": [
     "---\n",
