Add GPU availability pre-check to Lab 3
Critical fix to prevent pod pending issues:
- Add Pre-Deployment section before Section 3
- Check current GPU usage across all namespaces
- Warn users to cleanup Lab 1 deployment if still running
- Provide clear commands to free GPUs
- Verify GPU availability before deployment

Prevents 'Insufficient nvidia.com/gpu' errors by ensuring users
clean up previous labs before starting Lab 3

--- a/03-grove-distributed-serving.ipynb
+++ b/03-grove-distributed-serving.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "943d5424",
+   "id": "81388379",
    "metadata": {},
    "source": [
     "# Lab 3: Distributed Dynamo with Multi-GPU/Multi-Node Serving\n",
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26835ff3",
+   "id": "339def64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,113 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2b751cc",
+   "id": "e6c2c377",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "## Pre-Deployment: Check GPU Availability\n",
+    "\n",
+    "**⚠️ CRITICAL**: Lab 3 requires GPUs for distributed workers. Before proceeding, verify you have sufficient GPU resources available.\n",
+    "\n",
+    "### Step 1: Check Current GPU Usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b6a0912",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "\n",
+    "echo \"=== Checking GPU Availability ===\"\n",
+    "echo \"\"\n",
+    "echo \"Total GPUs on this node:\"\n",
+    "kubectl get nodes -o custom-columns=NAME:.metadata.name,GPUs:.status.capacity.nvidia\\\\.com/gpu\n",
+    "\n",
+    "echo \"\"\n",
+    "echo \"Currently allocated GPUs:\"\n",
+    "kubectl get pods -A -o json | jq -r '.items[] | select(.spec.containers[].resources.limits.\"nvidia.com/gpu\" != null) | \"\\(.metadata.namespace)/\\(.metadata.name): \\(.spec.containers[].resources.limits.\"nvidia.com/gpu\") GPU(s)\"'\n",
+    "\n",
+    "echo \"\"\n",
+    "echo \"GPU requests by namespace:\"\n",
+    "kubectl get pods -A -o json | jq -r '.items | group_by(.metadata.namespace) | .[] | \"\\(.[0].metadata.namespace): \\([.[] | .spec.containers[].resources.limits.\"nvidia.com/gpu\" // \"0\"] | add) GPU(s)\"' | grep -v \": 0 GPU\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "655dcd77",
+   "metadata": {},
+   "source": [
+    "### Step 2: Clean Up Lab 1 Deployment (If Still Running)\n",
+    "\n",
+    "**⚠️ WARNING**: If Lab 1 deployment is still running, you MUST delete it first to free GPUs for Lab 3.\n",
+    "\n",
+    "Lab 3 deployment requires:\n",
+    "- **2 GPUs** for 2 distributed workers (1 GPU each)\n",
+    "\n",
+    "If you have only 2 GPUs total and Lab 1 is using them, run this cleanup:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "002864b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "\n",
+    "echo \"Checking for Lab 1 deployment...\"\n",
+    "if kubectl get dynamographdeployment vllm-disagg-router -n $NAMESPACE &>/dev/null; then\n",
+    "    echo \"\"\n",
+    "    echo \"⚠️  Lab 1 deployment (vllm-disagg-router) is still running!\"\n",
+    "    echo \"   This deployment is using GPUs needed for Lab 3.\"\n",
+    "    echo \"\"\n",
+    "    echo \"Delete Lab 1 deployment? (you can redeploy it later)\"\n",
+    "    echo \"\"\n",
+    "    echo \"Run: kubectl delete dynamographdeployment vllm-disagg-router -n $NAMESPACE\"\n",
+    "    echo \"     kubectl delete svc vllm-frontend-nodeport -n $NAMESPACE\"\n",
+    "    echo \"\"\n",
+    "    echo \"Or press Ctrl+C to keep Lab 1 running (Lab 3 will fail if insufficient GPUs)\"\n",
+    "else\n",
+    "    echo \"✓ Lab 1 deployment not found - GPUs should be available\"\n",
+    "fi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07cd5793",
+   "metadata": {},
+   "source": [
+    "### Step 3: Verify GPUs Are Available\n",
+    "\n",
+    "After cleaning up Lab 1 (if needed), verify GPUs are free:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "afd94a1b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "echo \"=== Final GPU Check ===\"\n",
+    "kubectl get nodes -o custom-columns=NAME:.metadata.name,TOTAL:.status.capacity.nvidia\\\\.com/gpu,ALLOCATABLE:.status.allocatable.nvidia\\\\.com/gpu\n",
+    "\n",
+    "echo \"\"\n",
+    "echo \"If ALLOCATABLE shows 2 GPUs, you're ready for Lab 3!\"\n",
+    "echo \"If ALLOCATABLE shows 0, pods are still terminating - wait 30 seconds and re-run.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ded47f1f",
    "metadata": {},
    "source": [
     "---\n",
@@ -231,7 +337,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c11ad3ff",
+   "id": "b9ab2011",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d6e76b",
+   "id": "e2d6ed3e",
    "metadata": {},
    "source": [
     "### Step 2: Create NodePort Service\n",
@@ -307,7 +413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c49d6569",
+   "id": "5ceaf792",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +445,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68fe8371",
+   "id": "c529bbe9",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -348,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3da585ab",
+   "id": "82d31b48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71671252",
+   "id": "1ee2ef14",
    "metadata": {},
    "source": [
     "### Step 4: Test Inference"
@@ -384,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11e9d97d",
+   "id": "dc2d72a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a22d3d",
+   "id": "7e27cc24",
    "metadata": {},
    "source": [
     "---\n",
@@ -424,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb144428",
+   "id": "d83c6027",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +556,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "486f499e",
+   "id": "74b2db7d",
    "metadata": {},
    "source": [
     "### Step 2: Test Distributed Dynamo with Traffic\n",
@@ -461,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "293c0f2b",
+   "id": "9db2a304",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,7 +619,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb22f2c6",
+   "id": "e2bb9b52",
    "metadata": {},
    "source": [
     "---\n",
@@ -613,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05922338",
+   "id": "56461381",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -644,7 +750,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fea914c2",
+   "id": "0acb03d4",
    "metadata": {},
    "source": [
     "**Note**: Cache hit/miss metrics depend on workload patterns. Even on a single node with multiple GPUs, KV-aware routing can improve cache hits by directing requests to the worker that already has relevant cache blocks.\n",
@@ -657,7 +763,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "839385a5",
+   "id": "c2a303e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -673,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a12ba126",
+   "id": "ca28a431",
    "metadata": {},
    "source": [
     "### etcd Health Check\n",
@@ -684,7 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92772f5b",
+   "id": "5cca8dfe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -708,7 +814,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63fde0c7",
+   "id": "4a1e4aaf",
    "metadata": {},
    "source": [
     "---\n",
@@ -721,7 +827,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4616f9aa",
+   "id": "d6b524bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +844,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef85c404",
+   "id": "b521fa7f",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -749,7 +855,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dfab674",
+   "id": "c0fe82f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +880,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "580c86c8",
+   "id": "6a5d50c2",
    "metadata": {},
    "source": [
     "---\n",
@@ -879,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0f522b8",
+   "id": "efd77070",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "563bf2a4",
+   "id": "b2e3b8a1",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -911,7 +1017,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "838f08c6",
+   "id": "98dffed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +1041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "264c2c7c",
+   "id": "21eb2a7e",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -944,7 +1050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b6a917e",
+   "id": "d6f68f01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -967,7 +1073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ba09bc8",
+   "id": "4387bb8f",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1108,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "977075ee",
+   "id": "cb0f36d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1143,7 +1249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e019d822",
+   "id": "9fd72bda",
    "metadata": {},
    "source": [
     "### Step 2: Install etcd Coordination Layer\n",
@@ -1154,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b353db94",
+   "id": "4d5636a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1186,7 +1292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de179c3e",
+   "id": "a6691f1d",
    "metadata": {},
    "source": [
     "### Step 3: Verify Infrastructure\n",
@@ -1197,7 +1303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05551ddd",
+   "id": "2ab9c484",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1336,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14c90516",
+   "id": "dd4cf24c",
    "metadata": {},
    "source": [
     "### Step 4: Enable Prometheus Monitoring (Optional)\n",
@@ -1241,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92daba8c",
+   "id": "609a1182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1291,7 +1397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df693f0f",
+   "id": "fb8712a7",
    "metadata": {},
    "source": [
     "### Cleanup (NATS/etcd)\n",
@@ -1302,7 +1408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb251f9d",
+   "id": "8c519973",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1327,7 +1433,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8672f759",
+   "id": "3fe0d5a0",
    "metadata": {},
    "source": [
     "### Configuring Dynamo to Use NATS/etcd\n",
